--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,14 +6,14 @@
 
 <script type="text/javascript" charset="utf-8">
 $(function () {
-  $(".js-next").on("click", function() {
+  $(".js-next").on('click', function() {
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
-    $.get("/products/" + nextId + "/data", function(data) {
+    $.get("/products/" + nextId + "/data", function() {
       $(".productName").text(data["name"]);
+      $(".productInventory").text(data["inventory"]);
       $(".productPrice").text(data["price"]);
       $(".productDescription").text(data["description"]);
-      $(".productInventory").text(data["inventory"]);
-      // re-set the id to current on the link
+
       $(".js-next").attr("data-id", data["id"]);
     });
   });
