--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,7 +8,7 @@
 $(function () {
   $(".js-next").on('click', function() {
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
-    $.get("/products/" + nextId + "/data", function() {
+    $.get("/products/" + nextId + "/data", function(data) {
       $(".productName").text(data["name"]);
       $(".productInventory").text(data["inventory"]);
       $(".productPrice").text(data["price"]);
